# perlinpinpin

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/functions/: BasicSmooth.h  ISmoothingFunction.h
src/image/: Biome.h  ImageGenerator.h  stb_image_write.cpp
src/map/: PerlinMapGenerator.h
src/noise/: NoiseGenerator.h  PerlinGenerator.h  RandomGenerator.h
ui/: app_window.slint
